# jaaj-7

./: CMakeLists.txt  README.md
include/: Block.h  Game.h  GameObject.h  Light.h  Map.h  Player.h  parent.h
include/engine/: Cam.h  Cube.h  EBO.h  Key.h  Mesh.h  Plane.h  Shader.h  SpriteSheet.h  Texture.h  VAO.h  VBO.h  file.h
include/glad/: glad.h
res/: map.txt
res/maps/: map.txt
res/shaders/: defalt.frag  defalt.vert  image.frag  image.vert
src/: Block.cpp  Game.cpp  GameObject.cpp  Light.cpp  Main.cpp  Map.cpp  Player.cpp  glad.c  std_image.cpp
